quick tweaks to avoid overflow from email fixes #46

--- a/source/stylesheets/_agency.scss
+++ b/source/stylesheets/_agency.scss
@@ -745,15 +745,19 @@ footer {
   .list {
     padding-left: 20%;
     text-align: left;
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin-bottom: 30px;
   }
 
   .contact-list {
-    padding-left: 20%;
-    text-align: left;
-    font-size: 1.5em;
+    padding-left: 0%;
+    text-align: center;
+    font-size: 1.2em;
     margin-bottom: 50px;
+    .mail {
+      font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      line-height: 1.15em;
+    }
   }
 
   h3 {
